// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.content - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

<section
  class="ant-layout emotion-0"
  id="areas.content"
>
  <section
    class="ant-layout emotion-1"
    id="areas.content_layout"
  >
    <main
      class="ant-layout-content emotion-1"
      id="areas.content_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
  </section>
</section>
`;

exports[`Render areas.footer - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-3 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="areas.footer"
>
  <section
    class="ant-layout emotion-1"
    id="areas.footer_layout"
  >
    <main
      class="ant-layout-content emotion-1"
      id="areas.footer_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
  </section>
  <footer
    class="ant-layout-footer emotion-3 hide-on-print"
    id="areas.footer_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render areas.header - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

<section
  class="ant-layout emotion-0"
  id="areas.header"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="areas.header_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout emotion-2"
    id="areas.header_layout"
  >
    <main
      class="ant-layout-content emotion-2"
      id="areas.header_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
  </section>
</section>
`;

exports[`Render areas.sider - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-3 {
  overflow: auto;
}

<section
  class="ant-layout emotion-0"
  id="areas.sider"
>
  <section
    class="ant-layout ant-layout-has-sider emotion-1"
    id="areas.sider_layout"
  >
    <main
      class="ant-layout-content emotion-1"
      id="areas.sider_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-3 hide-on-print"
      id="areas.sider_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
</section>
`;

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

<section
  class="ant-layout emotion-0"
  id="default"
>
  <section
    class="ant-layout emotion-1"
    id="default_layout"
  >
    <main
      class="ant-layout-content emotion-1"
      id="default_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
  </section>
</section>
`;

exports[`Render properties.content.style: border: 5px solid blue - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-3 {
  border: 5px solid blue;
}

.emotion-4 {
  overflow: auto;
}

.emotion-5 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="properties.content.style: border: 5px solid blue"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.content.style: border: 5px solid blue_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.content.style: border: 5px solid blue_layout"
  >
    <main
      class="ant-layout-content emotion-3"
      id="properties.content.style: border: 5px solid blue_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.content.style: border: 5px solid blue_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.content.style: border: 5px solid blue_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.footer.style: border: 5px solid blue - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-4 {
  overflow: auto;
}

.emotion-5 {
  margin: auto;
  border: 5px solid blue;
}

<section
  class="ant-layout emotion-0"
  id="properties.footer.style: border: 5px solid blue"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.footer.style: border: 5px solid blue_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.footer.style: border: 5px solid blue_layout"
  >
    <main
      class="ant-layout-content emotion-2"
      id="properties.footer.style: border: 5px solid blue_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.footer.style: border: 5px solid blue_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.footer.style: border: 5px solid blue_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.header.color: #4432a8  - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-1 {
  background-color: #4432a8;
}

.emotion-4 {
  overflow: auto;
}

.emotion-5 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="properties.header.color: #4432a8 "
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.header.color: #4432a8 _header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.header.color: #4432a8 _layout"
  >
    <main
      class="ant-layout-content emotion-2"
      id="properties.header.color: #4432a8 _content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.header.color: #4432a8 _sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.header.color: #4432a8 _footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.header.style: border: 5px solid blue - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-1 {
  border: 5px solid blue;
}

.emotion-4 {
  overflow: auto;
}

.emotion-5 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="properties.header.style: border: 5px solid blue"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.header.style: border: 5px solid blue_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.header.style: border: 5px solid blue_layout"
  >
    <main
      class="ant-layout-content emotion-2"
      id="properties.header.style: border: 5px solid blue_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.header.style: border: 5px solid blue_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.header.style: border: 5px solid blue_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.header.theme: light - dark is default - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-1 {
  background-color: #fff;
}

.emotion-4 {
  overflow: auto;
}

.emotion-5 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="properties.header.theme: light - dark is default"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.header.theme: light - dark is default_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.header.theme: light - dark is default_layout"
  >
    <main
      class="ant-layout-content emotion-2"
      id="properties.header.theme: light - dark is default_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.header.theme: light - dark is default_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.header.theme: light - dark is default_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.main.style: border: 5px solid blue - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-2 {
  border: 5px solid blue;
}

.emotion-4 {
  overflow: auto;
}

.emotion-5 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="properties.main.style: border: 5px solid blue"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.main.style: border: 5px solid blue_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.main.style: border: 5px solid blue_layout"
  >
    <main
      class="ant-layout-content emotion-3"
      id="properties.main.style: border: 5px solid blue_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.main.style: border: 5px solid blue_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.main.style: border: 5px solid blue_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.sider.style: border: 5px solid blue - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-4 {
  overflow: auto;
  border: 5px solid blue;
}

.emotion-5 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="properties.sider.style: border: 5px solid blue"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.sider.style: border: 5px solid blue_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.sider.style: border: 5px solid blue_layout"
  >
    <main
      class="ant-layout-content emotion-2"
      id="properties.sider.style: border: 5px solid blue_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.sider.style: border: 5px solid blue_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.sider.style: border: 5px solid blue_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render properties.style: border: 5px solid blue - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
  border: 5px solid blue;
}

.emotion-4 {
  overflow: auto;
}

.emotion-5 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="properties.style: border: 5px solid blue"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.style: border: 5px solid blue_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.style: border: 5px solid blue_layout"
  >
    <main
      class="ant-layout-content emotion-2"
      id="properties.style: border: 5px solid blue_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.style: border: 5px solid blue_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.style: border: 5px solid blue_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render required = true areas.content - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

<section
  class="ant-layout emotion-0"
  id="areas.content"
>
  <section
    class="ant-layout emotion-1"
    id="areas.content_layout"
  >
    <main
      class="ant-layout-content emotion-1"
      id="areas.content_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
  </section>
</section>
`;

exports[`Render required = true areas.footer - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-3 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="areas.footer"
>
  <section
    class="ant-layout emotion-1"
    id="areas.footer_layout"
  >
    <main
      class="ant-layout-content emotion-1"
      id="areas.footer_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
  </section>
  <footer
    class="ant-layout-footer emotion-3 hide-on-print"
    id="areas.footer_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render required = true areas.header - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

<section
  class="ant-layout emotion-0"
  id="areas.header"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="areas.header_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout emotion-2"
    id="areas.header_layout"
  >
    <main
      class="ant-layout-content emotion-2"
      id="areas.header_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
  </section>
</section>
`;

exports[`Render required = true areas.sider - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-3 {
  overflow: auto;
}

<section
  class="ant-layout emotion-0"
  id="areas.sider"
>
  <section
    class="ant-layout ant-layout-has-sider emotion-1"
    id="areas.sider_layout"
  >
    <main
      class="ant-layout-content emotion-1"
      id="areas.sider_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-3 hide-on-print"
      id="areas.sider_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
</section>
`;

exports[`Render required = true default - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

<section
  class="ant-layout emotion-0"
  id="default"
>
  <section
    class="ant-layout emotion-1"
    id="default_layout"
  >
    <main
      class="ant-layout-content emotion-1"
      id="default_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
  </section>
</section>
`;

exports[`Render required = true properties.content.style: border: 5px solid blue - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-3 {
  border: 5px solid blue;
}

.emotion-4 {
  overflow: auto;
}

.emotion-5 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="properties.content.style: border: 5px solid blue"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.content.style: border: 5px solid blue_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.content.style: border: 5px solid blue_layout"
  >
    <main
      class="ant-layout-content emotion-3"
      id="properties.content.style: border: 5px solid blue_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.content.style: border: 5px solid blue_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.content.style: border: 5px solid blue_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render required = true properties.footer.style: border: 5px solid blue - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-4 {
  overflow: auto;
}

.emotion-5 {
  margin: auto;
  border: 5px solid blue;
}

<section
  class="ant-layout emotion-0"
  id="properties.footer.style: border: 5px solid blue"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.footer.style: border: 5px solid blue_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.footer.style: border: 5px solid blue_layout"
  >
    <main
      class="ant-layout-content emotion-2"
      id="properties.footer.style: border: 5px solid blue_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.footer.style: border: 5px solid blue_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.footer.style: border: 5px solid blue_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render required = true properties.header.color: #4432a8  - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-1 {
  background-color: #4432a8;
}

.emotion-4 {
  overflow: auto;
}

.emotion-5 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="properties.header.color: #4432a8 "
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.header.color: #4432a8 _header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.header.color: #4432a8 _layout"
  >
    <main
      class="ant-layout-content emotion-2"
      id="properties.header.color: #4432a8 _content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.header.color: #4432a8 _sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.header.color: #4432a8 _footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render required = true properties.header.style: border: 5px solid blue - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-1 {
  border: 5px solid blue;
}

.emotion-4 {
  overflow: auto;
}

.emotion-5 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="properties.header.style: border: 5px solid blue"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.header.style: border: 5px solid blue_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.header.style: border: 5px solid blue_layout"
  >
    <main
      class="ant-layout-content emotion-2"
      id="properties.header.style: border: 5px solid blue_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.header.style: border: 5px solid blue_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.header.style: border: 5px solid blue_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render required = true properties.header.theme: light - dark is default - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-1 {
  background-color: #fff;
}

.emotion-4 {
  overflow: auto;
}

.emotion-5 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="properties.header.theme: light - dark is default"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.header.theme: light - dark is default_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.header.theme: light - dark is default_layout"
  >
    <main
      class="ant-layout-content emotion-2"
      id="properties.header.theme: light - dark is default_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.header.theme: light - dark is default_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.header.theme: light - dark is default_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render required = true properties.main.style: border: 5px solid blue - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-2 {
  border: 5px solid blue;
}

.emotion-4 {
  overflow: auto;
}

.emotion-5 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="properties.main.style: border: 5px solid blue"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.main.style: border: 5px solid blue_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.main.style: border: 5px solid blue_layout"
  >
    <main
      class="ant-layout-content emotion-3"
      id="properties.main.style: border: 5px solid blue_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.main.style: border: 5px solid blue_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.main.style: border: 5px solid blue_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render required = true properties.sider.style: border: 5px solid blue - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
}

.emotion-4 {
  overflow: auto;
  border: 5px solid blue;
}

.emotion-5 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="properties.sider.style: border: 5px solid blue"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.sider.style: border: 5px solid blue_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.sider.style: border: 5px solid blue_layout"
  >
    <main
      class="ant-layout-content emotion-2"
      id="properties.sider.style: border: 5px solid blue_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.sider.style: border: 5px solid blue_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.sider.style: border: 5px solid blue_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Render required = true properties.style: border: 5px solid blue - value[0] 1`] = `
.emotion-0 {
  min-height: 100vh;
  border: 5px solid blue;
}

.emotion-4 {
  overflow: auto;
}

.emotion-5 {
  margin: auto;
}

<section
  class="ant-layout emotion-0"
  id="properties.style: border: 5px solid blue"
>
  <header
    class="ant-layout-header emotion-1 hide-on-print"
    id="properties.style: border: 5px solid blue_header"
  >
    <div
      data-testid="area-header"
      style="border: 1px solid red; padding: 10px;"
    >
      header
    </div>
  </header>
  <section
    class="ant-layout ant-layout-has-sider emotion-2"
    id="properties.style: border: 5px solid blue_layout"
  >
    <main
      class="ant-layout-content emotion-2"
      id="properties.style: border: 5px solid blue_content"
    >
      <div
        data-testid="area-content"
        style="border: 1px solid red; padding: 10px;"
      >
        content
      </div>
    </main>
    <aside
      class="ant-layout-sider ant-layout-sider-dark emotion-4 hide-on-print"
      id="properties.style: border: 5px solid blue_sider"
      style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          data-testid="area-sider"
          style="border: 1px solid red; padding: 10px;"
        >
          sider
        </div>
      </div>
    </aside>
  </section>
  <footer
    class="ant-layout-footer emotion-5 hide-on-print"
    id="properties.style: border: 5px solid blue_footer"
  >
    <div
      data-testid="area-footer"
      style="border: 1px solid red; padding: 10px;"
    >
      footer
    </div>
  </footer>
</section>
`;

exports[`Test Schema areas.content 1`] = `true`;

exports[`Test Schema areas.content 2`] = `null`;

exports[`Test Schema areas.footer 1`] = `true`;

exports[`Test Schema areas.footer 2`] = `null`;

exports[`Test Schema areas.header 1`] = `true`;

exports[`Test Schema areas.header 2`] = `null`;

exports[`Test Schema areas.sider 1`] = `true`;

exports[`Test Schema areas.sider 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.content.style: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.content.style: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.footer.style: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.footer.style: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.header.color: #4432a8  1`] = `true`;

exports[`Test Schema properties.header.color: #4432a8  2`] = `null`;

exports[`Test Schema properties.header.style: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.header.style: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.header.theme: light - dark is default 1`] = `true`;

exports[`Test Schema properties.header.theme: light - dark is default 2`] = `null`;

exports[`Test Schema properties.main.style: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.main.style: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.sider.style: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.sider.style: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.style: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.style: border: 5px solid blue 2`] = `null`;
